--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <div data-bs-spy="scroll" data-bs-target="cabecalho" data-bs-smooth-scroll="true">
         <section id="sobre-o-anime">
-            <div class="carousel slide" data-bs-ride="carousel" id="carousel">
+            <div class="carousel slide carousel-fade" data-bs-ride="carousel" id="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="3000"><img src="images/slides/slide1.jpg" alt=""></div>
                     <div class="carousel-item" data-bs-interval="3000"><img src="images/slides/slide2.jpg" alt=""></div>
