--- a/index.html
+++ b/index.html
@@ -33,10 +33,24 @@
         <section id="sobre-o-anime">
             <div class="carousel slide carousel-fade" data-bs-ride="carousel" id="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="3000"><img src="images/slides/slide1.jpg" alt=""></div>
-                    <div class="carousel-item" data-bs-interval="3000"><img src="images/slides/slide2.jpg" alt=""></div>
-                    <div class="carousel-item" data-bs-interval="3000"><img src="images/slides/slide3.jpg" alt=""></div>
-                </div>
+                    <div class="carousel-item active" data-bs-interval="3000">
+                        <picture>
+                            <source media="(max-width: 600px)" srcset="images/slides/slide-cel-1.jpg">
+                            <img src="images/slides/slide1.jpg" alt="">
+                        </picture>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <picture>
+                            <source media="(max-width: 600px)" srcset="images/slides/slide-cel-2.jpg">
+                            <img src="images/slides/slide2.jpg" alt="">
+                        </picture>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <picture>
+                            <source media="(max-width: 600px)" srcset="images/slides/slide-cel-3.jpg">
+                            <img src="images/slides/slide3.jpg" alt=""></div>
+                        </picture>
+                    </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span></button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next"><span class="carousel-control-next-icon"></span></button>
                 <div class="carousel-indicators">
